--- a/MyTestMauiApp/MyTestMauiApp.csproj
+++ b/MyTestMauiApp/MyTestMauiApp.csproj
@@ -39,7 +39,7 @@
 
 				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
 				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 				<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
@@ -70,12 +70,23 @@
 		</ItemGroup>
 
 		<ItemGroup>
+		  <PackageReference Include="Prism.DryIoc.Maui" Version="8.1.273-pre" />
+		  <PackageReference Include="Prism.Maui" Version="8.1.273-pre" />
+		</ItemGroup>
+
+		<ItemGroup>
+				<Compile Update="Pages\Bug0002Page.xaml.cs">
+				  <DependentUpon>Bug0002Page.xaml</DependentUpon>
+				</Compile>
 				<Compile Update="Pages\Bug0001Page.xaml.cs">
 						<DependentUpon>Bug0001Page.xaml</DependentUpon>
 				</Compile>
 		</ItemGroup>
 
 		<ItemGroup>
+				<MauiXaml Update="Pages\Bug0002Page.xaml">
+				  <Generator>MSBuild:Compile</Generator>
+				</MauiXaml>
 				<MauiXaml Update="Pages\Bug0001Page.xaml">
 						<Generator>MSBuild:Compile</Generator>
 				</MauiXaml>
